support nouvel objet dpt

--- a/demonstrateurs/piezo/piezo.htm
+++ b/demonstrateurs/piezo/piezo.htm
@@ -119,6 +119,7 @@ ecritLog('fin', function (reponse) {	});
 <p><i>Quelques chroniques remarquables :
 <ul>
 <li>Chronique la plus ancienne : <a href="piezo.htm?code_dpt=59&code_bss=00147D0218%2FP1">piézomètre 00147D0218/P1 à Lille</a></li>
+<li>Chronique comportant le plus de mesures : <a href="piezo/piezo.htm?code_dpt=06&code_bss=09994X0521/P4B">piézomètre 09994X0521/P4B à Nice</a></li>
 <li>Exemple d'une longue série régulière de 1980 à 2019 : <a href="piezo.htm?code_dpt=54&code_bss=01937X0054%2FF">piézomètre 01937X0054/F à Villers-en-Haye</a></li> 
 <li>Exemple d'une longue série avec un trou dans les données : <a href="piezo.htm?code_dpt=71&code_bss=05765X0013%2FSONDAG">piézomètre 05765X0013/SONDAG à Vitry-sur-Loire</a></li>
 <li>Exemple de comparaison de niveaux : <a href="piezo.htm?code_dpt=45&code_bss=03635X0545/PZ1,03636X1060/PZ2,03636X1061/PZ3,03636X1062/PZ4,03982X1045/F">Comparaison de 5 piézomètres à Orléans</a></li>
