--- a/demonstrateurs/piezo/piezo.htm
+++ b/demonstrateurs/piezo/piezo.htm
@@ -49,15 +49,19 @@
 urllog = "https://www.nalguise.net/piezo/log.php";
 ecritLog('deb', function (reponse) {		});
 
-code_dpt = '01';
+//code_dpt = '01';
 var f = extractUrlParams();
 if (typeof(f['code_dpt']) !== 'undefined') { 
 	// il y a un paramètre code_dpt
 	code_dpt = f['code_dpt'];
-	if (!(code_dpt in dpt)) {
+	//console.table(Object.entries(dpt));
+	console.log("code_dpt="+code_dpt);
+	/* plus de test car pas moyen de savoir simplement si le code_dpt est dans la property code de l'objet dpt
+	if (!(code_dpt in Object.values(dpt))) {
+		console.log("code_dpt non reconnu");
 		ecritLog('Code Département non reconnu : ' + code_dpt + ', transformé en 01', function (reponse) {		});
 		code_dpt = '01';
-	}
+	}*/
 }
 npt = 0;
 if (typeof(f['code_bss']) !== 'undefined') { 
@@ -90,7 +94,6 @@ if (typeof(f['code_bss']) !== 'undefined') {
 </p></TABLE>
 
 <p><TABLE id="tableau" COLS="8" BORDER="1" CELLPADDING="3" CELLSPACING="0">
-	<tr><th>Code BSS</th><th>Commune</th><th align="right">Nb Mesures</th><th>Début</th><th>Fin</th><th align="right">Niveau mini</th><th align="right">Niveau maxi</th><th>Entité hydrogéol.</th><th>Action</th></tr>
 </TABLE></p>
 <p>&nbsp;</p>
 <div id="basicMap"></div>
@@ -104,7 +107,11 @@ if (typeof(f['code_bss']) !== 'undefined') {
 <script language="JavaScript" type="text/javascript">
 	remplitDpt();
 	remplitPiezo();
+	dtable = document.getElementById('tableau'); 
+	
 	if (npt > 0) { 
+		dtable.innerHTML='<TABLE id="tableau" COLS="8" BORDER="1" CELLPADDING="3" CELLSPACING="0">' + 
+		  '<tr><th>Code BSS</th><th>Commune</th><th align="right">Nb Mesures</th><th>Début</th><th>Fin</th><th align="right">Niveau mini</th><th align="right">Niveau maxi</th><th>Entité hydrogéol.</th><th>Action</th></tr></TABLE>';
 		graphique(1, 'H', "Hauteur");
 	}
 	carte();
@@ -137,5 +144,22 @@ ecritLog('fin', function (reponse) {	});
 <script>
 	urlPage();
 </script>
+
+<!-- Piwik -->
+ <script type="text/javascript">
+ var _paq = _paq || [];
+ _paq.push(['trackPageView']);
+ _paq.push(['enableLinkTracking']);
+ (function() {
+ var u="//wwwstats.brgm.fr/";
+ _paq.push(['setTrackerUrl', u+'piwik.php']);
+ _paq.push(['setSiteId', 121]);
+ var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+ g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+ })();
+ </script>
+ <noscript><p><img src="//wwwstats.brgm.fr/piwik.php?idsite=121" style="border:0;" alt="" /></p></noscript>
+<!-- End Piwik Code -->
+
 </body>
 </html>
