--- a/demonstrateurs/test.htm
+++ b/demonstrateurs/test.htm
@@ -13,7 +13,7 @@
 <script type="text/javascript">
     var req = new XMLHttpRequest();
     var url = window.location.href;
-    req.open("GET", "http://www.nalguise.net/log/log.php?siteid=121&url=" + url + "?titre=" + document.title );
+    req.open("GET", "https://www.nalguise.net/log/log.php?siteid=121&url=" + url + "?titre=" + document.title );
     req.send(null);
 </script>
 
